--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div style="width: 90%; position: relative; left: 50%; transform: translateX(-50%);">
         <p center>I'm a front end web developer that makes decently fun games for the web. You can hire me for absolutely <span style="color: #59B177;">free.</span></p>
     </div>
-    <a href="https://discord.gg/cUZnQXGt2w" class="button">DM me on Discord</a>
+    <a href="https://discord.gg/cUZnQXGt2w" class="button">Discord</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
